[package]
name = "botdiscord"
version = "0.1.0"
authors = ["el papu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = {version = "0.11.5", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "collector"]}
tokio = {version = "1", features = ["macros","rt","rt-multi-thread"]}

